--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="calculator">
             <form>
-                <input type="text">
+                <input type="text" readonly>
             </form>
             <div class="buttons">
                 <div>
@@ -44,5 +44,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
