--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="calculator">
             <form>
-                <input type="text" readonly>
+                <input type="text" >
             </form>
             <div class="buttons">
                 <div>
